--- a/BaekJoon/9461.md
+++ b/BaekJoon/9461.md
@@ -49,7 +49,7 @@ for _ in range(int(input())):
 
 - 파도반 수열의 값을 입력 범주만큼 계산해서 리스트에 저장하고, 이를 조회하여 반환하는 식으로 풀이하였다.
 - 파도반 수열은 아래와 같이 정리할 수 있다
-        ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d6e44899-002c-47bb-a62b-aaf72b6cf03b/Untitled.png)
+- $F(x) =\begin{cases}1 & x = 0, 1, 2\\F(x-2) + F(x-3) & x> 2\end{cases}$
 - 위 수식에 따라 리스트에 파도반 수열의 모든 값을 저장한다 — 이 단계에서  시간복잡도 O(N)
 - 테스트 케이스의 값이 들어오는 것에 따라서 저장된 리스트에서 값을 조회하여 반환한다 — 이 단게에서 시간 복잡도 O(M * 1)
 - 정리하자면, 위 코드의 시간복잡도는 O(N + M)이고, N의 최대값은 101이며 M은 테스트케이스의 수이다. 따라서 실질적인 핵심 파트의 시간복잡도는 O(N)이다.
