--- a/BaekJoon/1920.md
+++ b/BaekJoon/1920.md
@@ -70,4 +70,4 @@ for target in find_list:
         - mid가 target보다 클 때 → `end = mid - 1`
         - mid가 target보다 작을 때 → `start = mid + 1`
     - start 가 end보다 크거나 같을 동안 위 조건을 반복하고, 만약 mid 반환 없이 반복문을 탈출한다면 이는 타겟값을 찾지 못한 것이므로 None을 반환한다.
-- `array_list`를 정렬하는데 $O(NlogN)$이 소요되고,  이분탐색을 수행하는데 $O(M * logN)$이 소요된다. 따라서, 시간복잡도는 $O(NlogN + MlogN)$이지만, 빅오 기법은 최대 시간복잡도만 작성하기 때문에 $O(NlogN)$이라고 할 수 있다. (N의 범주와 M의 범주는 동일하다)
+- `array_list`를 정렬하는데 $O(NlogN)$이 소요되고,  이분탐색을 수행하는데 $O(M * logN)$이 소요된다. 따라서, 시간복잡도는 $O(NlogN + MlogN)$이고, 빅오 기법은 최대 시간복잡도만 작성하기 때문에 $O((M+N)logN)$이라고 할 수 있다. (N의 범주와 M의 범주는 동일하다)
